--- a/app/template/card.css
+++ b/app/template/card.css
@@ -20,8 +20,8 @@ img {
 
 .card-wrapper {
   background: var(--secondary);
-  margin-top: 2rem;
-  padding-top: 4rem;
+  margin: 2rem 0;
+  padding: 4rem 0;
 }
 
 .cards {
