--- a/app/home/index.ejs
+++ b/app/home/index.ejs
@@ -18,7 +18,7 @@
       <a href="https://www.instagram.com/jc_fc_paintings/" target="_blank">
         <img class="insta" src="/img/insta.png" onclick="">
       </a>
-      <p id="description">Contattaci su instagram per orinare un quadro su misura!</p>
+      <p id="description">Contattaci su instagram per ordinare un quadro su misura!</p>
     </section>
 
 
@@ -39,8 +39,8 @@
     </div>
 
     <section class="footer">
-      <p id="description">Contattaci su instagram per orinare un quadro su misura!</p>
-      
+      <p id="description">Contattaci su instagram per ordinare un quadro su misura!</p>
+
       <a href="https://www.instagram.com/jc_fc_paintings/" target="_blank">
         <img class="insta" src="/img/insta.png" onclick="">
       </a>
