--- a/app/home/index.ejs
+++ b/app/home/index.ejs
@@ -25,15 +25,20 @@
     <div class="card-wrapper">
       <section class="cards">
 
-        <%- include('card.ejs', {id: 0, title: '1.5m x 1m', p: '600.- CHF'}) %>
+        <!-- quel culuru da Jan -->
+        <%- include('card.ejs', {id: 0, title: '145cm x 93cm', p: '450.- CHF'}) %>
 
-        <%- include('card.ejs', {id: 1, title: '50cm x 25cm', p: '350.- CHF'}) %>
+        <!-- Quel rosa da Asia -->
+        <%- include('card.ejs', {id: 3, title: '145cm x 93cm', p: '450.- CHF'}) %>
 
-        <%- include('card.ejs', {id: 2, title: '45cm x 35xm', p: '400.- CHF'}) %>
+        <!-- Quel arancion in stanza da Jan -->
+        <%- include('card.ejs', {id: 2, title: '70cm x 46cm', p: '200.- CHF'}) %>
 
-        <%- include('card.ejs', {id: 3, title: '1m x 1.5m', p: '600.- CHF'}) %>
+        <!-- Quel ner in stanza da Jan -->
+        <%- include('card.ejs', {id: 1, title: '50cm x 25cm', p: '150.- CHF'}) %>
 
-        <%- include('card.ejs', {id: 4, title: '1.2m x 0.8m', p: '550.- CHF'}) %>
+        <!-- Quel ner da Bianca -->
+        <%- include('card.ejs', {id: 4, title: '120cm x 80cm', p: '400.- CHF'}) %>
 
       </section>
     </div>
