--- a/app/template/style.css
+++ b/app/template/style.css
@@ -20,20 +20,29 @@
 :root {
   --primary: #e9ecef;
   --secondary: #f8f9fa;
-  --petroleum: #343a40;
-  --gray: #ddd;
-  --dark: #333;
   --shadow: 3px 5px 4px rgba(104, 104, 104, 0.5);
   --border: 1px solid rgba(0, 0, 0, 0.25)
 }
 
 html {
   font-family: roboto;
-  color: var(--dark);
   min-width: 29rem;
 }
 
 body {
   margin: 0;
   line-height: 1.4;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary: #cbcbcb;
+    --secondary: #232323;
+    --shadow: 3px 5px 4px rgba(0, 0, 0, 0.5);
+    --border: 1px solid rgba(255, 255, 255, 0.25)
+  }
+
+  html {
+    background-color: #333;
+  }
 }
