--- a/app/home/index.ejs
+++ b/app/home/index.ejs
@@ -16,7 +16,10 @@
       <h1 id="welcome">JC & FC</h1>
       <p id="description">Galleria dei quadri di Jan & Fritz</p>
       <a href="https://www.instagram.com/jc_fc_paintings/" target="_blank">
-        <img class="insta" src="/img/insta.png" onclick="">
+        <picture>
+          <source srcset="/img/insta_dark.png" media="(prefers-color-scheme: dark)">
+          <img class="insta" src="/img/insta.png">
+        </picture>
       </a>
       <p id="description">Contattaci su instagram per ordinare un quadro su misura!</p>
     </section>
@@ -47,7 +50,10 @@
       <p id="description">Contattaci su instagram per ordinare un quadro su misura!</p>
 
       <a href="https://www.instagram.com/jc_fc_paintings/" target="_blank">
-        <img class="insta" src="/img/insta.png" onclick="">
+        <picture>
+          <source srcset="/img/insta_dark.png" media="(prefers-color-scheme: dark)">
+          <img class="insta" src="/img/insta.png">
+        </picture>
       </a>
     </section>
 
