--- a/app/template/style.css
+++ b/app/template/style.css
@@ -36,13 +36,18 @@ body {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --primary: #cbcbcb;
+    --primary: #161616;
     --secondary: #232323;
     --shadow: 3px 5px 4px rgba(0, 0, 0, 0.5);
     --border: 1px solid rgba(255, 255, 255, 0.25)
   }
 
   html {
+    color: white;
     background-color: #333;
+  }
+
+  .card {
+    background: #161616;
   }
 }
